fix: streamline CommandRunner logic, Tokenizer token processing, and simplify token handling across components